--- a/sitemap.org
+++ b/sitemap.org
@@ -5,3 +5,4 @@
   - [[file:posts/2020-06-10-analytics-and-open-source-sustainability.org][Analytics and Open Source Sustainability]]
   - [[file:posts/2023-12-29-call-for-haskell-libraries.org][Call for Haskell Libraries]]
   - [[file:posts/2017-08-25-haskell-dbs-and-musicbrainz.org][Easy database access with Haskell and postgresql-simple]]
+  - [[file:posts/2024-01-15-standalone-org.org][Let's Help Org Mode Escape From Emacs]]
