--- a/posts/2024-02-29-analytics-are-winning.org
+++ b/posts/2024-02-29-analytics-are-winning.org
@@ -1,12 +1,14 @@
 #+title: Analytics are Starting to Win in Open Source
 #+author: Avi Press
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="../images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1">
+#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/monospace-web.css">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
 
 [[file:../index.org][Avi Press]] | February 29, 2024
 
 #+BEGIN_EXPORT html
-<img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
+<img class="collapse" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
 #+END_EXPORT
 
 ---
