--- a/posts/2026-01-19-how-i-use-ai-today.org
+++ b/posts/2026-01-19-how-i-use-ai-today.org
@@ -1,10 +1,15 @@
 #+title: A Snapshot of How I'm Using AI in January 2026
-#+options: num:nil toc:nil date:nil
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="/images/dwarf-icon.png">
+#+author: Avi Press
+#+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1">
+#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/monospace-web.css">
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
 
-Avi Press | January 19, 2026
+[[file:../index.org][Avi Press]] | January 19, 2026
 
-[[file:../index.org][Home]]
+#+BEGIN_EXPORT html
+<img class="collapse" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
+#+END_EXPORT
 
 ---
 
