--- a/posts/2026-01-19-how-i-use-ai-today.org
+++ b/posts/2026-01-19-how-i-use-ai-today.org
@@ -1,7 +1,7 @@
 #+title: A Snapshot of How I'm Using AI in January 2026
 #+author: Avi Press
 #+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1">
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="../images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/monospace-web.css">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
 
